# QtQImageRGBvsIndexed

./: CMakeLists.txt  QtQImageRGBvsIndexed.cpp  README.md
